--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -2,7 +2,7 @@
   {{/* announcement */}}
   {{ partial "announcement.html" . }}
   <div class="container pt-5 pb-5 pb-md-0">
-    <div class="row pt-md-5">
+    <div class="row pt-4 pt-md-5">
       <div class="col-12 teaser-box">
         <div class="logo-intro">
           <a href="/">
