Fix mobile buttons

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,15 +42,21 @@ page-home
         {{ end }}
 
         <div class="d-block d-md-flex">
-          <a class="button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
-            Start now
-          </a>
-          <a class="button button--outlinedBlue mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
-            See it in action
-          </a>
-          <a class="button button--outlinedBlue" href="https://github.com/keptn/keptn">
-            Read docs
-          </a>
+          <div class="d-block">
+            <a class="button button--filledGreen d-inline-block mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
+              Start now
+            </a>
+          </div>
+          <div class="d-block">
+            <a class="button button--outlinedBlue d-inline-block mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
+              See it in action
+            </a>
+          </div>
+          <div class="d-block">
+            <a class="button button--outlinedBlue d-inline-block" href="https://github.com/keptn/keptn">
+              Read docs
+            </a>
+          </div>
         </div>
       </div>
       <div class="col-12 pt-4 pb-3 teaser-box">
@@ -73,7 +79,7 @@ page-home
         {{ end }}
 
         <div class="d-block d-md-flex">
-          <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
+          <a class="button d-inline-block button--filledGreen" href="https://github.com/keptn/keptn">
             Start now
           </a>
         </div>
@@ -102,7 +108,7 @@ page-home
         {{ with .Site.GetPage "section" "home/remediation" }}
         {{ .Content }}
         {{ end }}
-        <div class="d-block d-md-flex">
+        <div class="d-inline-block d-md-flex">
           <a class="button button--filledGreen" href="https://github.com/keptn/keptn">
             Start now
           </a>
@@ -192,7 +198,7 @@ page-home
                     Sebastian Bonk
                   </p>
                   <p class="splide__info">
-                    Manager of Software adflkgj
+                    Manager of Software
                   </p>
                 </div>
               </li>
