--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -1,26 +1,33 @@
 <div class="get-started teaser-box teaser-box--white">
   <div class="container pt-5 pb-5">
     <div class="row pt-2 pb-2 pb-md-3">
-      <div class="d-md-flex flex-md-row">
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-md-between pl-0 pr-0 pb-4 pb-md-0">
-          <div class="pt-2">
-            {{ with .Site.GetPage "section" "home/get-started" }}
-            {{ .Content }}
-            {{ end }}
 
-            <a href="#" class="button button--filledGreen d-inline-block">Start now</a>
-            &nbsp;&nbsp;&nbsp;
-            <a href="#" class="button button--outlinedWhite d-inline-block">See it in action</a>
-            &nbsp;&nbsp;&nbsp;
-            <a href="#" class="button button--outlinedWhite d-inline-block">Read docs</a>
+      <div class="col-12 col-md-6 pb-4 pb-md-0">
+        <div class="pt-2">
+          {{ with .Site.GetPage "section" "home/get-started" }}
+          {{ .Content }}
+          {{ end }}
+
+          <div class="d-block d-sm-flex">
+            <div class="d-block">
+              <a href="#" class="d-inline-block button button--filledGreen mb-3 mr-md-2">Start now</a>
+              &nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="d-block">
+              <a href="#" class="button button--outlinedWhite d-inline-block mb-3 mr-md-2">See it in action</a>
+              &nbsp;&nbsp;&nbsp;
+            </div>
+            <div class="d-block">
+              <a href="#" class="button button--outlinedWhite d-inline-block mr-md-2">Read docs</a>
+            </div>
           </div>
         </div>
+      </div>
 
-        <div class="col-md-1"></div>
+      <div class="col-md-1"></div>
 
-        <div class="col-12 col-md-5 d-flex flex-column justify-content-md-between pl-0 pr-0 pb-md-0">
-          <img src="/images/home/cloud-native-computing-foundation.svg">
-        </div>
+      <div class="col-12 col-md-5 d-flex flex-column justify-content-md-between pl-0 pr-0 pb-md-0">
+        <img src="/images/home/cloud-native-computing-foundation.svg">
       </div>
     </div>
   </div>
