--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -20,16 +20,21 @@
         {{ .Content }}
         {{ end }}
         <div class="d-block d-md-flex">
-          <a class="d-block button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
+          <div class="d-block">
+          <a class="d-inline-block button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
             Start now
           </a>
-          <a class="d-block button button--filledWhite" href="https://github.com/keptn/keptn">
+          </div>
+        <div class="d-block">
+          <a class="d-inline-block button button--filledWhite" href="https://github.com/keptn/keptn">
             Keptn on Github
             <img class="icon" src="/images/general/icon-github-home.svg" alt="Github">
             <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
           </a>
+      </div>
         </div>
       </div>
+      <div class="col-md-2"></div>
       <div class="col-12 pt-5 teaser-box">
         <picture class="intro-graphic intro-graphic--small">>
           <img src="/images/home/hero/keptn-logo-white.svg">
