Update navigation for mobile. KEPTN-9719

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -35,6 +35,7 @@
     color: transparent;
     box-shadow: none;
     top: 72px;
+    z-index: 1500;
 
     @media screen and (min-width: $bp-md) {
       top: 64px;
