--- a/assets/scss/general/_base.scss
+++ b/assets/scss/general/_base.scss
@@ -58,6 +58,7 @@ body.page-why-keptn {
 
 body.page-home {
   margin-top: 0;
+  overflow-y: hidden;
 
   .hamburger.is-active {
     .hamburger-inner,
