--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -4,7 +4,7 @@
     border-radius: 24px;
     box-shadow: 0 5px 10px 0 rgba(3, 12, 18, 0.15);
     font-weight: $font-weight-bold;
-    font-size: $font-size--xxs;
+    font-size: $font-size-s-home;
     text-align: center;
     text-decoration: none !important;
     display: block;
