Update list icon. KEPTN-9719

--- a/assets/scss/components/_teaser-box.scss
+++ b/assets/scss/components/_teaser-box.scss
@@ -73,7 +73,7 @@
         &::before {
           content: url('/images/home/icon-arrow-list.svg');
           position: absolute;
-          top: 2px;
+          top: 0;
           left: 0;
         }
       }
