--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -10,7 +10,7 @@
           </a>
         </div>
       </div>
-      <div class="col-12 col-md-4 teaser-box teaser-box--white teaser-box--intro">
+      <div class="col-10 col-md-4 teaser-box teaser-box--white teaser-box--intro">
         {{ with .Site.GetPage "section" "home/headline" }}
         {{ .Content }}
         {{ end }}
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-12 pt-5 teaser-box">
+      <div class="col-12 pt-3 pt-md-0 teaser-box">
         <picture class="intro-graphic intro-graphic--small">>
           <img src="/images/home/hero/keptn-logo-white.svg">
         </picture>
