Update colors. KEPTN-9719

--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -42,7 +42,7 @@
     }
 
     &--darkBlue {
-      background-color: #004486;
+      background-color: $teaserCard-home;
 
       * {
         color: $white;
