--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -22,28 +22,29 @@ $primary-opacity: rgba(#006BB8, 0.05);
 $secondary: #002C66;
 
 // Keptn-Home
-$primary-home-900: #006bb8ff;
-$primary-home-700: #006bb880;
-$primary-home-500: #006bb84d;
-$primary-home-100: #006bb80d;
-$primary-home-050: #d8e6f4ff;
-$secondary-home-900: #14ba5aff;
-$secondary-home-700: #14ba5a80;
-$secondary-home-500: #14ba5a4d;
-$secondary-home-100: #14ba5a1A;
-$dark-blue-home-900: #002c66ff;
-$dark-blue-home-700: #002c6680;
-$dark-blue-home-500: #002c664d;
-$dark-blue-home-100: #002c660d;
+$primary-home-900: #006bb8;
+$primary-home-700: rgba(0, 107, 184, 0.5);
+$primary-home-500: rgba(0, 107, 184, 0.3);
+$primary-home-100: rgba(0, 107, 184, 0.05);
+$primary-home-050: #d8e6f4;
+$secondary-home-900: #14ba5a;
+$secondary-home-700: rgba(20, 186, 90, 0.5);
+$secondary-home-500: rgba(20, 186, 90, 0.3);
+$secondary-home-100: rgba(20, 186, 90, 0.1);
+$dark-blue-home-900: #002c66;
+$dark-blue-home-700: rgba(0, 44, 102, 0.5);
+$dark-blue-home-500: rgba(0, 44, 102, 0.3);
+$dark-blue-home-100: rgba(0, 44, 102, 0.05);
 $greyscale-home-900: #222222ff;
-$greyscale-home-800: #222222CC;
-$greyscale-home-700: #22222280;
-$greyscale-home-500: #2222224d;
-$greyscale-home-300: #22222233;
-$greyscale-home-200: #2222221a;
-$greyscale-home-100: #2222220d;
+$greyscale-home-800: rgba(34, 34, 34, 0.8);
+$greyscale-home-700: rgba(34, 34, 34, 0.5);
+$greyscale-home-500: rgba(34, 34, 34, 0.3);
+$greyscale-home-300: rgba(34, 34, 34, 0.2);
+$greyscale-home-200: rgba(34, 34, 34, 0.1);
+$greyscale-home-100: rgba(34, 34, 34, 0.05);
 $textColor-home-900: #262626ff;
 $bannerColor-home: #005593;
+$teaserCard-home: #004486;
 
 
 // Links
