--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -16,11 +16,19 @@
     &--filledGreen {
       background-color: $secondary-home-900;
       color: $white;
+
+      &:hover {
+        background: linear-gradient(-225deg, $secondary-home-900 0%, #009941 100%);
+      }
     }
 
     &--filledWhite {
       background-color: $white;
       color: $primary-home-900;
+
+      &:hover {
+        background: linear-gradient(-225deg, #ecf7ff 0%, #c8e2f5 100%);
+      }
 
       .icon {
         &--hover {
@@ -32,18 +40,27 @@
     &--outlinedBlue {
       border: 2px solid $primary-home-900;
       color: $primary-home-900;
+
+      &:hover {
+        border: 2px solid #0f4891;
+        color: #0f4891;
+      }
     }
 
     &--outlinedWhite {
       border: 2px solid $white;
       color: $white;
+
+      &:hover {
+        border: 2px solid #96c2e2;
+        color: #96c2e2;
+      }
     }
 
     &--header {
       color: $white !important;
       background-color: $primary;
       padding: 10px 32px;
-      transition: all 0.25s ease-in-out;
 
       &:hover {
         background-color: #1b4c86;
