--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -122,7 +122,7 @@
 
   // Get started
   .get-started {
-    background: $primary-home-500;
+    background: $teaserCard-home;
   }
 
   // Onboard Services & Keptn Workflows
