--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,17 @@
 <div class="footer">
   <div class="container">
     <div class="row">
+      <div class="col-12">
+        <a class="footer-icon-link footer-icon-link--top float-right" onclick="window.scrollTo({ top: 0 });" href="javascript: void(0)">
+          <img class="footer-icon" alt="Back to top" src="{{ .Site.BaseURL }}/images/home/icon-arrow.svg">
+        </a>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-6 text-left">
         <img class="footer-logo" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/logo-white.svg">
       </div>
-      <div class="col-md-2">
+      <div class="col-6 col-md-2">
         <p class="footer-title">Sitemap</p>
         <ul class="footer-links">
           <li><a href="">Why Keptn?</a></li>
@@ -13,7 +20,7 @@
           <li><a href="">Integration</a></li>
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-6 col-md-2">
         <p class="footer-title">Resources</p>
         <ul class="footer-links">
           <li><a href="">Docs</a></li>
@@ -23,7 +30,7 @@
           <li><a href="">Issues</a></li>
         </ul>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 pt-3 pt-md-0">
         <p class="footer-title">Community</p>
         <div class="footer-icons">
           <a class="footer-icon-link">
@@ -44,7 +51,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row pt-3 pt-md-0">
       <div class="col-12">
         <p class="footer-text">Initially created by Dynatrace</p>
       </div>
