Update footer styling KEPTN-9719

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
-  <div class="container">
+  <div class="container pt-md-5">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 pb-5">
         <a class="footer-icon-link footer-icon-link--top float-right" onclick="window.scrollTo({ top: 0 });" href="javascript: void(0)">
           <img class="footer-icon" alt="Back to top" src="{{ .Site.BaseURL }}/images/home/icon-arrow.svg">
         </a>
