Update tools section KEPTN-9719

--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -6,137 +6,147 @@
     <div class="teaser-card-content">
       <div class="teaser-card-container">
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-delivery-argo.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-delivery-azure.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-delivery-gitlab.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-delivery-helm.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-delivery-jenkins.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <div class="teaser-card-icon-plus">
+            <img src="/images/home/icon-plus.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="teaser-card mr-lg-4">
     <h5 class="teaser-card-title">
-      Delivery
+      Observability
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-observability-dynatrace.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-observability-grafana.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-observability-opentelementry.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-observability-prometheus.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-observability-prometheus.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <div class="teaser-card-icon-plus">
+            <img src="/images/home/icon-plus.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="teaser-card mr-sm-4 mr-lg-0">
     <h5 class="teaser-card-title">
-      Delivery
+      Testing
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-testing-jmeter.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-testing-litmus.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-testing-locust.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-testing-neoload.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-testing-selenium.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <div class="teaser-card-icon-plus">
+            <img src="/images/home/icon-plus.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="teaser-card mr-lg-4">
     <h5 class="teaser-card-title">
-      Delivery
+      Notifications
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-notifications-keptn.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-notifications-slack.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-notifications-teams.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-notifications-webex.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-notifications-webhook.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <div class="teaser-card-icon-plus">
+            <img src="/images/home/icon-plus.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="teaser-card mr-sm-4">
     <h5 class="teaser-card-title">
-      Delivery
+      Automation
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-automation-ansible.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-automation-bash.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-automation-python.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-automation-servicenow.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/logo-avodaq.png">
+          <img src="/images/home/integrations/tools-automation-webhook.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
+          <div class="teaser-card-icon-plus">
+            <img src="/images/home/icon-plus.svg">
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="teaser-card teaser-card--darkBlue">
     <div class="teaser-card-content teaser-card-content--white teaser-card-content--courier">
-      {{ with .Site.GetPage "section" "home/capabilities-06" }}
+      {{ with .Site.GetPage "section" "home/tools-06" }}
       {{ .Content }}
       {{ end }}
       <div class="col-12 col-md-8 pr-0 pl-0 pt-4">
