--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -145,6 +145,21 @@
       font-weight: $font-weight-bold;
       margin-bottom: 24px;
     }
+
+    .teaser-card-icon-plus {
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+      background-color: $secondary-home-100;
+      display: flex;
+      height: 100%;
+      width: 100%;
+
+      img {
+        height: 17px;
+        width: 17px;
+      }
+    }
   }
 }
 
