--- a/layouts/index.html
+++ b/layouts/index.html
@@ -148,7 +148,7 @@ page-home
         {{ .Content }}
         {{ end }}
       </div>
-      <div class="text col-12 pt-md-3 d-flex flex-column justify-content-center">
+      <div class="text col-12 pt-md-3 d-flex flex-column justify-content-center z-index">
         {{ with .Site.GetPage "section" "home/happy-users-logos" }}
         {{ .Content }}
         {{ end }}
