Update get started section. KEPTN-9719

--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -1,5 +1,5 @@
 <div class="get-started teaser-box teaser-box--white">
-  <div class="container pt-5 pb-5">
+  <div class="container pt-3 pt-md-5 pb-5">
     <div class="row pt-2 pb-2 pb-md-3">
 
       <div class="col-12 col-md-6 pb-4 pb-md-0">
