--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -36,8 +36,7 @@
       </div>
       <div class="col-md-2"></div>
       <div class="col-12 teaser-box pt-3">
-        <div>
-          <svg class="intro-graphic" viewBox="0 0 1136 893" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="d-none d-md-block" viewBox="0 0 1136 893" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <title>graphic-hero</title>
             <defs>
               <rect id="path-1" x="0" y="0" width="1087" height="409" rx="13"></rect>
@@ -688,9 +687,7 @@
               </g>
             </g>
           </svg>
-        </div>
-        <div>
-          <svg class="intro-graphic intro-graphic--small"viewBox="0 0 340 530" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg class="d-block d-md-none" viewBox="0 0 340 530" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <title>graphic-hero-XS</title>
             <defs>
               <rect id="path-1" x="0" y="0" width="280" height="204.5" rx="6.5"></rect>
@@ -1214,7 +1211,6 @@
               </g>
             </g>
           </svg>
-        </div>
       </div>
     </div>
   </div>
