Update buttons for tablet view.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,14 +41,14 @@ page-home
           {{ .Content }}
         {{ end }}
 
-        <div class="d-block d-md-flex">
+        <div class="d-block d-lg-flex">
           <div class="d-block">
-            <a class="button button--filledGreen d-inline-block mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
+            <a class="button button--filledGreen d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://github.com/keptn/keptn">
               Start now
             </a>
           </div>
           <div class="d-block">
-            <a class="button button--outlinedBlue d-inline-block mb-3 mb-md-0 mr-0 mr-md-3" href="https://github.com/keptn/keptn">
+            <a class="button button--outlinedBlue d-inline-block mb-3 mb-lg-0 mr-0 mr-lg-3" href="https://github.com/keptn/keptn">
               See it in action
             </a>
           </div>
