--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -18,9 +18,9 @@
         {{ with .Site.GetPage "section" "home/intro" }}
         {{ .Content }}
         {{ end }}
-        <div class="d-block d-md-flex">
+        <div class="d-block d-lg-flex">
           <div class="d-block">
-            <a class="d-inline-block button button--filledGreen mb-3 mb-md-0 mr-0 mr-md-3"
+            <a class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-0 mr-lg-3"
                href="https://github.com/keptn/keptn">
               Start now
             </a>
