Update custom breakpoints for small teasercards.

--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -64,6 +64,12 @@
 
     @media screen and (min-width: $bp-xs) {
       min-height: 1px;
+      flex: 0 1 21%;
+      max-width: 21%;
+    }
+
+    @media screen and (min-width: 310px) {
+      min-height: 1px;
       flex: 0 1 26%;
       max-width: 26%;
     }
