Update observability icon missing.

--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -47,7 +47,7 @@
           <img src="/images/home/integrations/tools-observability-prometheus.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding mr-4">
-          <img src="/images/home/integrations/tools-observability-prometheus.png">
+          <img src="">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
           <div class="teaser-card-icon-plus">
