--- a/layouts/index.html
+++ b/layouts/index.html
@@ -158,7 +158,7 @@ page-home
       </div>
     </div>
   </div>
-  <div class="container pb-5 clients pl-0 pr-0 pl-sm-3 pr-sm-3">
+  <div class="container pb-5 clients pl-0 pr-0 pl-lg-3 pr-lg-3">
     <div class="row pt-2 pt-md-4 pb-md-2">
       <div class="col-12">
         <div class="splide">
