--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -1,5 +1,23 @@
 .splide {
   z-index: 100;
+
+  &__track {
+
+    @media (min-width: $bp-lg) {
+      overflow: visible !important;
+    }
+
+    //&:after {
+    //  content: '';
+    //  position: absolute;
+    //  top: 0;
+    //  right: -20px;
+    //  height: 100%;
+    //  width: 100px;
+    //  background-image: url('/images/home/shadow-slider.png');
+    //}
+  }
+
   &__slide {
     display: flex;
     height: auto !important;
@@ -8,10 +26,12 @@
     background-color: $white;
     border-radius: 13px;
     margin-right: 10px !important;
+    box-shadow: 20px 20px 80px 0px rgba(2, 63, 107, 0.17);
 
     @media (min-width: $bp-lg) {
       width: 690px !important;
       margin-right: 25px !important;
+      box-shadow: 20px 20px 80px 0px rgba(2, 63, 107, 0.17);
     }
 
     @media (min-width: $bp-xl) {
@@ -67,6 +87,7 @@
       width: 42px;
       height: 42px;
       background-color: $secondary-home-900;
+      opacity: 1;
 
       svg {
         fill: $white;
@@ -87,11 +108,11 @@
 
       @media (min-width: $bp-xl) {
         &--prev {
-          left: -50px;
+          left: -60px;
         }
 
         &--next {
-          right: -50px;
+          right: 217px;
         }
       }
     }
