--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,8 +34,8 @@ page-home
 
 {{/* Usage */}}
 <div class="usage">
-  <div class="container pb-5 pt-3 pt-md-0">
-    <div class="row">
+  <div class="container pb-5 pt-4 pt-md-0">
+    <div class="row pb-md-5">
       <div class="col-12 col-md-8 teaser-box">
         {{ with .Site.GetPage "section" "home/usage" }}
           {{ .Content }}
@@ -71,8 +71,8 @@ page-home
 
 {{/* Delivery */}}
 <div class="delivery">
-  <div class="container pb-5 pt-3 pt-md-5">
-    <div class="row">
+  <div class="container pb-5 pt-4 pt-md-5">
+    <div class="row pb-md-5">
       <div class="col-12 col-md-8 teaser-box">
         {{ with .Site.GetPage "section" "home/delivery" }}
         {{ .Content }}
@@ -96,7 +96,7 @@ page-home
 
 {{/* Remediation */}}
 <div class="remediation">
-  <div class="container pb-5 pt-3 pt-md-5">
+  <div class="container pb-5 pt-4 pt-md-5">
     <div class="row d-flex">
       <div class="col-12 col-lg-8 pr-lg-5 pt-lg-4 teaser-box remediation-graphic">
         <picture>
@@ -115,7 +115,7 @@ page-home
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row pb-md-5">
       <div class="col-12 pt-md-2 pt-lg-5 teaser-box remediation-graphic-bottom">
         <picture>
           <img src="/images/home/use-cases/graphic-use-case-03b.svg">
@@ -127,8 +127,8 @@ page-home
 
 {{/* Key Capabilities */}}
   <div class="capabilities">
-    <div class="container pb-4 pt-3 pt-md-5">
-      <div class="row pt-md-3 teaser-box teaser-box--white">
+    <div class="container pb-5 pt-4 pt-md-5">
+      <div class="row pt-md-3 pb-md-5 teaser-box teaser-box--white">
         <div class="col-12 pb-md-0 pb-4">
           {{ with .Site.GetPage "section" "home/capabilities" }}
           {{ .Content }}
@@ -141,7 +141,7 @@ page-home
 
 {{/* Happy Users */}}
 <div class="happy-users">
-  <div class="container pt-3 pt-md-5 pb-4">
+  <div class="container pt-4 pt-md-5 pb-5">
     <div class="row pt-md-3">
       <div class="text col-12 pb-md-0 pb-4 teaser-box">
         {{ with .Site.GetPage "section" "home/happy-users" }}
@@ -159,7 +159,7 @@ page-home
     </div>
   </div>
   <div class="container pb-5 clients pl-0 pr-0 pl-lg-3 pr-lg-3">
-    <div class="row pt-2 pt-md-4 pb-md-2">
+    <div class="row pt-2 pt-md-4 pb-md-5">
       <div class="col-12">
         <div class="splide">
           <div class="splide__track">
@@ -226,13 +226,10 @@ page-home
     </div>
   </div>
 </div>
-  </div>
-</div>
-
 
 {{/* Tools */}}
 <div class="tools">
-  <div class="container pt-3 pt-md-5 pb-4">
+  <div class="container pt-4 pt-md-5 pb-5">
     <div class="row">
       <div class="col-12 pb-1 pb-md-0">
         <div class="text col-12 teaser-box">
