--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -14,6 +14,7 @@
     }
 
     &--filledGreen {
+      border: 2px solid $secondary-home-900;
       background-color: $secondary-home-900;
       color: $white;
 
@@ -23,6 +24,7 @@
     }
 
     &--filledWhite {
+      border: 2px solid $white;
       background-color: $white;
       color: $primary-home-900;
 
