Update happy users and tools + buttons.

--- a/assets/scss/components/_teaser-card.scss
+++ b/assets/scss/components/_teaser-card.scss
@@ -55,7 +55,10 @@
     }
 
     &--outline {
-      border: 2px dotted $secondary-home-900;
+      background-size: cover;
+      box-shadow: none !important;
+      background-repeat: no-repeat;
+      background: url('/images/home/add-tool.svg');
     }
 
   &--smallPadding {
