--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -20,10 +20,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-delivery-jenkins.png">
         </div>
-        <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <div class="teaser-card-icon-plus">
-            <img src="/images/home/icon-plus.svg">
-          </div>
+        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
         </div>
       </div>
     </div>
@@ -49,10 +46,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="">
         </div>
-        <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <div class="teaser-card-icon-plus">
-            <img src="/images/home/icon-plus.svg">
-          </div>
+        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
         </div>
       </div>
     </div>
@@ -78,10 +72,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-testing-selenium.png">
         </div>
-        <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <div class="teaser-card-icon-plus">
-            <img src="/images/home/icon-plus.svg">
-          </div>
+        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
         </div>
       </div>
     </div>
@@ -107,10 +98,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-notifications-webhook.png">
         </div>
-        <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <div class="teaser-card-icon-plus">
-            <img src="/images/home/icon-plus.svg">
-          </div>
+        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
         </div>
       </div>
     </div>
@@ -136,10 +124,7 @@
         <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/integrations/tools-automation-webhook.png">
         </div>
-        <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
-          <div class="teaser-card-icon-plus">
-            <img src="/images/home/icon-plus.svg">
-          </div>
+        <div class="teaser-card teaser-card--smallPadding teaser-card--outline">
         </div>
       </div>
     </div>
